mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-mysql
  namespace: default
  labels:
    name: my-mysql
spec:
  externalIPs:
    - 192.168.1.180
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    name: my-mysql
