svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    #service.beta.kubernetes.io/alicloud-loadbalancer-id: "lb-wz9du18pa4e7f93vetzww"
  labels:
    app: nginx-ingress
  name: nginx-ingress
  namespace: kube-system
spec:
  ports:
  - name: http
    nodePort: 30468
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    nodePort: 30471
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    #app: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  #type: LoadBalancer
  type: NodePort
status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.155
