tt.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pand-ingress
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  ## 根据域名实现转发
  - host: dashboard.vm.com
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
